[package]
name = "btest"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
gstd = { path = "../gstd", features = ["debug"] }
gear-core-runner = { path = "../core-runner", optional = true }
gear-core = { path = "../core", optional = true }

[dev-dependencies]

[build-dependencies]
substrate-wasm-builder = "4.0.0"

[lib]

[features]
std = ["gear-core-runner", "gear-core"]
default = ["std"]
